[package]
name = "neg_tw"
version = "0.1.0"
authors = ["VS Code <vscode@microsoft.com>"]
edition = "2021"

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
diesel = { version = "1.4.8", features = ["postgres"]}
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "neg_tw"
path = "src/main.rs"